# Breakbot-v2.2

./: .env  .gitignore  README.md  api_test.py  bot.py  pyproject.toml  start.py  test.py
breaker/: Colors.py  ConfigManager.py  LocaleManager.py  LoggerManager.py  MaiApiHandler.py  RoleManager.py  Utils.py
database/: roles.db
locale/break/: locale.toml
plugins/core/role/: __init__.py
static/: config.example.toml
